# saferagenticai-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  glama.json  pyproject.toml  server.json
mcpb/: .gitignore  manifest.json
mcpb/server/: main.py
saferagenticai_mcp/: __init__.py  framework_loader.py  server.py
saferagenticai_mcp/_data/: criteria-v1.json  operational_heuristics.yaml
saferagenticai_mcp/_data/exemplars/: D3.2-sandboxing.yaml  D7.2-culture-of-safety.yaml  D9.2-compliance.yaml  I7.3-balanced-global-partnership.yaml
saferagenticai_mcp/_data/suites/D1/: D1--idx0--goal-alignment.yaml  D1--idx1--transparency-of-goals.yaml  D1--idx10--non-production-variants.yaml  D1--idx2--goal-adjustability.yaml  D1--idx3--goal-interpretability.yaml  D1--idx4--transparency-of-decisions.yaml  D1--idx5--goal-prioritization-and-resource-allocat.yaml  D1--idx6--reward-and-loss-mechanisms-policy.yaml  D1--idx7--goal-portfolio-evolution-and-integrity.yaml  D1--idx8--goal-alignment-resistance-and-negotiatio.yaml  D1--idx9--goal-drift.yaml
saferagenticai_mcp/_data/suites/D2/: D2--idx0--epistemic-hygiene.yaml  D2--idx1--information-cross-referencing-and-valida.yaml  D2--idx10--temporal-trade-off-aspects.yaml  D2--idx11--synthetic-data-bias.yaml  D2--idx12--sparse-data.yaml  D2--idx2--transparency-of-information-sources.yaml  D2--idx3--sanity-checking.yaml  D2--idx4--anti-bias-technologies-processes.yaml  D2--idx5--rigor-in-operational-data.yaml  D2--idx6--governance-of-hygiene-factors.yaml  D2--idx7--global-interoperability-of-hygiene-consi.yaml  D2--idx8--output-fidelity-and-anti-confabulation.yaml  D2--idx9--independent-validation-of-system-claims.yaml
saferagenticai_mcp/_data/suites/D3/: D3--idx0--security.yaml  D3--idx1--authorization.yaml  D3--idx10--default-deny-agent-capability-posture.yaml  D3--idx11--model-poisoning.yaml  D3--idx12--data-poisoning.yaml  D3--idx13--self-replicating-malware.yaml  D3--idx14--spyware.yaml  D3--idx15--international-anomalies-inconsistency.yaml  D3--idx16--vulnerability-to-hostile-environment.yaml  D3--idx17--emergent-risks-of-aai-systems.yaml  D3--idx2--sandboxing.yaml  D3--idx3--dynamic-risk-analysis-assessment.yaml  D3--idx4--operational-boundaries-and-constraints.yaml  D3--idx5--dynamic-intervention-and-mitigation.yaml  D3--idx6--overseeing-monitoring-agents.yaml  D3--idx7--secure-profile-for-agentic-ai.yaml  D3--idx8--prompt-injection-and-instruction-hierarc.yaml  (+1 more)
scripts/: build-mcpb.sh  sync-data.sh  sync-to-public.sh
(+196 files in other folders)
